css/index.css
/* The hero image */
.hero-image {
  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/space.jpg");

  /* Set a specific height */
  height: 100vh;

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

/* Place text in the middle of the image */
.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

/* Card */
.container {
  margin: 20vh auto;
}

.card {
  margin: 3vh auto;
  border: none;
}

.navbar {
  background-color: transparent !important;
  /* mix-blend-mode: exclusion; */
}

.navbar-nav .nav-link.active,
.navbar-brand {
  color: white;
}

.navbar-nav .nav-link {
  color: #ffffff88;
}

